# eel4930_turtlebot4_pkg

./: .gitignore  README.md  frames.gv  requirements.txt  setup.sh
Node Draft/: .$Draft_of_Plan.bkp  Draft_of_Plan  Draft_of_Plan.drawio  README.md
SLAM Maps/: README.md  maec_map.pgm
autoro_interfaces/: CMakeLists.txt  package.xml
autoro_interfaces/srv/: Trig.srv  YAng.srv
autoro_navigation/: CMakeLists.txt  README.txt  package.xml  setup.cfg  setup.py
autoro_navigation/autoro_navigation/: camera_pose.py  get_map_test.py  test_node.py
autoro_navigation/config/: patrol_path.yaml
autoro_navigation/launch/: gazebo_launch.launch.xml  gazebo_launch.xml  turtlebot.launch.xml
autoro_navigation/maps/: maec_map_edited.pgm  mil_test_map.pgm  mil_test_map.pgm:Zone.Identifier  mil_test_map.yaml  world_map.pgm  world_map.yaml
autoro_navigation/models/mil_building/: model.config  model.sdf
autoro_navigation/models/mil_building_2/: model.config  model.sdf
autoro_navigation/models/unit_box/: model.sdf
autoro_navigation/nodes/: marker_server.py  navigation.py
autoro_navigation/rviz/: nav2_default_view.rviz
autoro_navigation/scripts/: get_map_test.py  occupancy_grid_test.py  static_aiming.py  test_node.py  test_node2.py
autoro_navigation/scripts/libs_autoro_navigation/: camera_pose.py
autoro_navigation/worlds/: mil_building.world  mil_building_edited.world
gpio_test/: README.MD  package.xml  setup.cfg  setup.py
gpio_test/gpio_test/: gpio_test.py  test continous.py
gun_nodes/: package.xml  setup.cfg  setup.py
gun_nodes/gun_nodes/: aim_y.py  shoot.py
kalman_filter_test/: package.xml  setup.cfg  setup.py
kalman_filter_test/kalman_filter_test/: KF.py  target_filter.py  target_filter_ros_test.py  target_filter_test.py  target_pose_estimation.py  test_other_method.py
kalman_filter_test/launch/: pc_test.launch.py
maps/: maec_map.yaml  maec_map_edited.yaml
movement_test/: README.MD  package.xml  setup.cfg  setup.py
movement_test/launch/: camera_test.launch.py  joy_movement.launch.py
movement_test/movement_test/: camera_depth.py  constant_move.py  joy_movement.py
movement_test/slam_test_imgs/: info.txt
oakd_lite_test/: README.md  camera_info.txt  package.xml  setup.cfg  setup.py
oakd_lite_test/launch/: camera_pubsub_test.launch.py  pc_cam_test.launch.py  turtlebot_cam_test.launch.py
oakd_lite_test/oakd_lite_test/: oakd_pub_test.py  oakd_pub_test.py.save  oakd_sub_test.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/autoro_navigation/share/autoro_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/autoro_navigator/share/autoro_navigator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/py_pubsub/share/py_pubsub/: package.sh  package.xml
ros2_ws/log/: latest_build
ros2_ws/src/autoro_navigation/: setup.py
ros2_ws/src/autoro_navigation/autoro_navigation/: get_costmap_test.py  occupancy_grid_test.py
ros2_ws/src/py_pubsub/: setup.py
ros2_ws/test_scripts/: boustrophedonic_search.py  nav2_test.py
tb4_movement/: package.xml  setup.cfg  setup.py
tb4_movement/tb4_movement/: shoot_aimed.py  static_aiming.py  static_aiming_y.py  tb4_movement.py
